--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -1,5 +1,5 @@
 .Brands{
-    background-color: #ffff;
+    background-color: #fff;
     width: 20vw;
     display: flex;
     align-items: center;
@@ -8,7 +8,7 @@
     margin: 50px 80px;
     position: sticky;
     box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
-    z-index: 7689798;
+    z-index: 100;
 }
 .logoBrands{
     display: flex;
@@ -16,7 +16,8 @@
     justify-content: center;
     padding: 10px;
     width: 80%;
-    margin: 20px 0;
+    margin: 50px 0;
+    margin-top: 5px;
     background-color: #f6f9fc;
 }
 .logoBrands img{
@@ -28,28 +29,15 @@
 }
 @media (max-width:1100px) {
     .Brands{
-        margin-left:0;
-        width: 5vw;
-        background-color:transparent ;
+        position: fixed;
+        right:-2000px;
+        top: 60px;
         box-shadow: none;
+        width: 100%;
+        height: 100%;
+        transition: .8s;
     }
-    .logoBrands{
-        width: 250%;
-        background-color:#fff;
-        border-radius: 30px;
-        transition: .5s;
-        box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
+     .setBrands{
+        right:-80px;
     }
-    .Brands h3{
-        display: none;
-        transition: .5s;
-    }
-    .logoBrands img{
-        margin-left: 20px;
-    }
-}
-@media (max-width:600px) {
-.logoBrands{
-    width: 350%;
-}
 }
