--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -5,8 +5,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 50px 80px;
-    position: sticky;
+    margin: 150px 80px;
+    position: fixed;
     box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
     z-index: 100;
 }
@@ -31,11 +31,12 @@
     .Brands{
         position: fixed;
         right:-2000px;
-        top: 40px;
+        top: 60px;
         box-shadow: none;
         width: 100%;
         height: 100%;
         transition: .5s;
+        margin: 40px 80px;
     }
      .setBrands{
         right:-80px;
