--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,9 +3,10 @@
     align-items: center;
     justify-content: space-around;
     background-color: #fff;
-    padding: 30px;
+    padding: 30px 0;
     box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
     position: fixed;
+    top:0;
     width: 100%;
     z-index: 09809;
 }
@@ -99,12 +100,20 @@
     .mobile{
         display: initial;
     }
+    /* .Header{
+        width: 100%;
+        padding-right: 190px;
+    } */
 }
 @media (max-width:650px) {
     .logo{
         display: none;
     }
     .Searching{
-        width: 70vw;
+        width: 50vw;
     }
+    /* .Header{
+        width: 100%;
+        padding-right: 190px;
+    } */
 }
