--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -1,6 +1,7 @@
 .Brands{
     background-color: #fff;
     width: 20vw;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +17,7 @@
     justify-content: center;
     padding: 10px;
     width: 80%;
-    margin: 50px 0;
+    margin: 20px 0;
     margin-top: 5px;
     background-color: #f6f9fc;
 }
@@ -36,9 +37,19 @@
         width: 100%;
         height: 100%;
         transition: .5s;
-        margin: 40px 80px;
+        margin: -10px 80px;
     }
      .setBrands{
         right:-80px;
+    }
+}
+@media (max-width:500px) {
+    .logoBrands{
+        margin: 30px 0;
+    }
+}
+@media (max-width:400px) {
+    .logoBrands{
+        margin: 16px 0;
     }
 }
